--- a/HSK more content/Languages/Russian/DefInjected/PawnKindDef/PawnKinds_Iguf.xml
+++ b/HSK more content/Languages/Russian/DefInjected/PawnKindDef/PawnKinds_Iguf.xml
@@ -3,8 +3,8 @@
 
   <!-- I.G.U.F. -->
 
-  <HMCIgufRanger.label>Рейнжер И.Г.У.Ф.</HMCIgufRanger.label>
-  <HMCIgufRanger.description>Рейнжер.</HMCIgufRanger.description>
+  <HMCIgufRanger.label>Рейнджер И.Г.У.Ф.</HMCIgufRanger.label>
+  <HMCIgufRanger.description>Рейнджер.</HMCIgufRanger.description>
 
   <HMCIgufHeavy.label>Подавитель И.Г.У.Ф.</HMCIgufHeavy.label>
   <HMCIgufHeavy.description>Подавитель.</HMCIgufHeavy.description>
