--- a/HSK more content/Languages/Russian/DefInjected/ThingDefs/Weapons_Guns_HMC.xml
+++ b/HSK more content/Languages/Russian/DefInjected/ThingDefs/Weapons_Guns_HMC.xml
@@ -217,27 +217,38 @@
 	<Gun_ZeonBlaster.label>Бластер Unc-B71 Zeon</Gun_ZeonBlaster.label>
 	<Gun_ZeonBlaster.description>Редчайшая бластерная пушка. Штучный экземпляр, которым оснащаются элитные силы роя механоидов.</Gun_ZeonBlaster.description>
 	
-	<!-- ====================== Xcom weapons ======================= -->	
+	<!-- ====================== Xcom weapons ======================= -->
 
-	<Laser_Pistol_HMC.label>Лазерный пистолет</Laser_Pistol_HMC.label>
-	<Laser_Pistol_HMC.description>Продвинутый пистолет. Высокая точность, дальность (для пистолета) стрельбы и низкая отдача, но низкая скорострельность.</Laser_Pistol_HMC.description>
+	<Laser_Pistol_HMC.label>Лазерный пистолет X1</Laser_Pistol_HMC.label>
+	<Laser_Pistol_HMC.description>Продвинутый пульсовый лазерный пистолет. По слухам разрабатывался тайной межгосударственной организацией для борьбы с пришельцами много веков назад.\n\nВсё оружие подобного типа обладает высокой дальностью, точностью, уроном, но низкой скорострельностью.</Laser_Pistol_HMC.description>
 
-	<HMC_Gun_LaserRifle.label>Лазерная винтовка</HMC_Gun_LaserRifle.label>
-	<HMC_Gun_LaserRifle.description>Продвинутая винтовка. Технология лазерной оптики в штурмовых винтовках обеспечивает существенное увеличение мощности по сравнению с обычными винтовками. Он стреляет одним мощным лазерным лучом с довольно высокой точностью и уроном.</HMC_Gun_LaserRifle.description>
+	<HMC_Gun_LaserRifle.label>Лазерная винтовка X2</HMC_Gun_LaserRifle.label>
+	<HMC_Gun_LaserRifle.description>Продвинутая пульсовая лазерная винтовка. Технология лазерной оптики в штурмовых винтовках обеспечивает существенное увеличение мощности по сравнению с обычными винтовками. Он стреляет одним мощным лазерным лучом с довольно высокой точностью и уроном. По слухам разрабатывался тайной межгосударственной организацией для борьбы с пришельцами много веков назад.\n\nВсё оружие подобного типа обладает высокой дальностью, точностью, уроном, но низкой скорострельностью.</HMC_Gun_LaserRifle.description>
 
-	<HMC_Gun_LaserSniperRifle.label>Лазерная снайперская винтовка</HMC_Gun_LaserSniperRifle.label>
-	<HMC_Gun_LaserSniperRifle.description>Продвинутая снайперская винтовка. Чрезвычайно мощное оружие, похожее на традиционную снайперскую винтовку, в которой используются новейшие достижения в оптике. Имеет более высокую скорострельность по сравнению со стандартными снайперскими винтовками.</HMC_Gun_LaserSniperRifle.description>
+	<HMC_Gun_LaserSniperRifle.label>Лазерная снайперская винтовка X3</HMC_Gun_LaserSniperRifle.label>
+	<HMC_Gun_LaserSniperRifle.description>Продвинутая пульсовая лазерная снайперская винтовка. Чрезвычайно мощное оружие, похожее на традиционную снайперскую винтовку, в которой используются новейшие достижения в оптике. По слухам разрабатывался тайной межгосударственной организацией для борьбы с пришельцами много веков назад.\n\nВсё оружие подобного типа обладает высокой дальностью, точностью, уроном, но низкой скорострельностью.</HMC_Gun_LaserSniperRifle.description>
 
-	<HMC_Gun_ScatterLaser.label>Лазерный дробовик</HMC_Gun_ScatterLaser.label>
-	<HMC_Gun_ScatterLaser.description>Продвинутый дробовик. Выполняет ту же тактическую роль, что и традиционный дробовик, но с большим уроном. Использует специальную призматическую линзу, которая рассеивает луч, а не фокусирует его.</HMC_Gun_ScatterLaser.description>
+	<HMC_Gun_ScatterLaser.label>Лазерный дробовик X4</HMC_Gun_ScatterLaser.label>
+	<HMC_Gun_ScatterLaser.description>Продвинутый пульсовый лазерный дробовик. Выполняет ту же тактическую роль, что и традиционный дробовик. Использует специальную призматическую линзу, которая рассеивает лазерный луч, а не фокусирует его. По слухам разрабатывался тайной межгосударственной организацией для борьбы с пришельцами много веков назад.\n\nВсё оружие подобного типа обладает высокой дальностью, точностью, уроном, но низкой скорострельностью.</HMC_Gun_ScatterLaser.description>
 
-	<HMC_Gun_HeavyLaser.label>Лазерный пулемет</HMC_Gun_HeavyLaser.label>
-	<HMC_Gun_HeavyLaser.description>Продвинутый пулемет. Более тяжелая и громоздская версия лазерной винтовки. Орудие работает на грани своей допустимой температуры, но все ещё остается удовлетворительно стабильным.</HMC_Gun_HeavyLaser.description>
+	<HMC_Gun_HeavyLaser.label>Лазерный пулемет X5</HMC_Gun_HeavyLaser.label>
+	<HMC_Gun_HeavyLaser.description>Продвинутый пульсовый лазерный пулемет. Более тяжелая и громоздская версия лазерной винтовки. Орудие работает на грани своей допустимой температуры, но все ещё остается удовлетворительно стабильным. По слухам разрабатывался тайной межгосударственной организацией для борьбы с пришельцами много веков назад.\n\nВсё оружие подобного типа обладает высокой дальностью, точностью, уроном, но низкой скорострельностью.</HMC_Gun_HeavyLaser.description>
 
 	<HMC_Gun_MagShotgun.label>Магнитный дробовик</HMC_Gun_MagShotgun.label>
 	<HMC_Gun_MagShotgun.description>Продвинутый дробовик. Выполняет ту же тактическую роль, что и традиционный дробовик, но с большим уроном за счет сильно повышенной скорости снарядов. Использует специальные боеприпасы, которые рассыпаются в процессе стрельбы на множество маленьких осколков.</HMC_Gun_MagShotgun.description>
 
 	<Mag_MG_HMC.label>Магнитный пулемет</Mag_MG_HMC.label>
 	<Mag_MG_HMC.description>Продвинутое оружие древнего мира. Необыкновенный высокоточный пулемет, способный пробить практически любую броню.</Mag_MG_HMC.description>
+	
+	<!-- ====================== Iguf weapons ======================= -->
+
+	<HMC_Iguf_MagRifle.label>Sclopetum magneticum simplex</HMC_Iguf_MagRifle.label>
+	<HMC_Iguf_MagRifle.description>Оружие предтеч. Необыкновенная высокоточная винтовка, способная пробить практически любую броню.\n\nИспользует архотехнологичные компоненты, поэтому воспроизвести такое оружие практически невозможно.</HMC_Iguf_MagRifle.description>
+
+	<HMC_Iguf_MagShotgun.label>Sclopetum magneticum fragmentorum</HMC_Iguf_MagShotgun.label>
+	<HMC_Iguf_MagShotgun.description>Оружие предтеч. Выполняет ту же тактическую роль, что и традиционный дробовик, но с большим уроном за счет сильно повышенной скорости снарядов. Использует специальные боеприпасы, которые рассыпаются в процессе стрельбы на множество маленьких осколков.\n\nИспользует архотехнологичные компоненты, поэтому воспроизвести такое оружие практически невозможно.</HMC_Iguf_MagShotgun.description>
+
+	<HMC_Iguf_MagMarksmanRifle.label>Sclopetum magneticum sagittarium</HMC_Iguf_MagMarksmanRifle.label>
+	<HMC_Iguf_MagMarksmanRifle.description>Оружие предтеч. Необыкновенная высокоточная марксманская винтовка, способная пробить практически любую броню.\n\nИспользует архотехнологичные компоненты, поэтому воспроизвести такое оружие практически невозможно.</HMC_Iguf_MagMarksmanRifle.description>
 
 </LanguageData>
