some easter eggs

--- a/HSK more content/Languages/Russian/DefInjected/RulePackDef/RulePacks_NameMakers_FactionsHighTechNorbals.xml
+++ b/HSK more content/Languages/Russian/DefInjected/RulePackDef/RulePacks_NameMakers_FactionsHighTechNorbals.xml
@@ -15,5 +15,6 @@
   <NamerFactionHTNorbal.rulePack.rulesStrings.11>HTNornorbinge->двуножки</NamerFactionHTNorbal.rulePack.rulesStrings.11>
   <NamerFactionHTNorbal.rulePack.rulesStrings.12>HTNornorbinge->духоты</NamerFactionHTNorbal.rulePack.rulesStrings.12>
   <NamerFactionHTNorbal.rulePack.rulesStrings.13>HTNornorbinge->черепашьего супа</NamerFactionHTNorbal.rulePack.rulesStrings.13>
+  <NamerFactionHTNorbal.rulePack.rulesStrings.14>HTNornorbinge->Эхомии</NamerFactionHTNorbal.rulePack.rulesStrings.14>
 
 </LanguageData>
