--- a/HSK more content/Languages/Russian/DefInjected/RulePackDef/RulePacks_NameMakers_FactionsIguf.xml
+++ b/HSK more content/Languages/Russian/DefInjected/RulePackDef/RulePacks_NameMakers_FactionsIguf.xml
@@ -14,5 +14,6 @@
   <NamerFactionIguf.rulePack.rulesStrings.10>IgufNameTwo->двуножки</NamerFactionIguf.rulePack.rulesStrings.10>
   <NamerFactionIguf.rulePack.rulesStrings.11>IgufNameTwo->стримлеров</NamerFactionIguf.rulePack.rulesStrings.11>
   <NamerFactionIguf.rulePack.rulesStrings.12>IgufNameTwo->когобочек</NamerFactionIguf.rulePack.rulesStrings.12>
+  <NamerFactionIguf.rulePack.rulesStrings.13>IgufNameTwo->Эхомии</NamerFactionIguf.rulePack.rulesStrings.13>
 
 </LanguageData>
