--- a/HSK more content/Languages/Russian/DefInjected/XenotypeDef/XenotypeDef.xml
+++ b/HSK more content/Languages/Russian/DefInjected/XenotypeDef/XenotypeDef.xml
@@ -13,4 +13,8 @@
   <HMC_HightechNorbal.description>Хайтек Норбалы - славный народец пришел к нам из далеких глубин космоса с явно добрыми намерениями причинять добро и наносить справедливость!</HMC_HightechNorbal.description>
   <HMC_HightechNorbal.descriptionShort>Хайтек Норбалы - славный народец пришел к нам из далеких глубин космоса с явно добрыми намерениями причинять добро и наносить справедливость!</HMC_HightechNorbal.descriptionShort>
 
+  <HMC_Lizardoggo.label>Собакящер</HMC_Lizardoggo.label>
+  <HMC_Lizardoggo.description>Загадочное создание. Плод воспаленного воображения и геномного гения, слитого воедино. Довольно хладнокровное и рассудительное создание, способное не только позаботиться о себе, но и продвинуть нашу колонию на шаг ближе к звёздам. А ещё оно очень милое!</HMC_Lizardoggo.description>
+  <HMC_Lizardoggo.descriptionShort>Загадочное создание. Плод воспаленного воображения и геномного гения, слитого воедино. Довольно хладнокровное и рассудительное создание, способное не только позаботиться о себе, но и продвинуть нашу колонию на шаг ближе к звёздам. А ещё оно очень милое!</HMC_Lizardoggo.descriptionShort>
+
 </LanguageData>
