--- a/HSK more content/Languages/Russian/DefInjected/ThingDefs/Bodyparts/BodyParts_Bionic.xml
+++ b/HSK more content/Languages/Russian/DefInjected/ThingDefs/Bodyparts/BodyParts_Bionic.xml
@@ -10,4 +10,9 @@
 	<HMC_HomunculusClaws.description>Небольшая лапка с острыми когтями.</HMC_HomunculusClaws.description>
 	<HMC_HomunculusClaws.labelNoun>лапка гомункула</HMC_HomunculusClaws.labelNoun>
 
+	<!-- Archotech parts -->
+
+	<HMC_ArchotechCombatArm.label>полисиловая архорука</HMC_ArchotechCombatArm.label>
+	<HMC_ArchotechCombatArm.description>Искусственная рука, сконструированная архотеком. Даёт её обладателю силу, позволяющую ломать крепкие брёвна одним движением кисти, и точность управления, с которой можно писать сонеты на рисовом зёрнышке. Выглядит и ощущается так, словно состоит из обычной плоти, но по прочности — крепче пластали. Даже если умудриться её повредить, она со временем восстановит свою структуру. Внутреннее устройство этой искусственной руки непостижимо для человеческого разума.\n\nДанная модель предназначена для использования в ближнем бою и не предоставляет значительных преимуществ для рабочих целей.</HMC_ArchotechCombatArm.description>
+  
 </LanguageData>
