--- a/HSK more content/Languages/Russian/DefInjected/ThingDefs/Buildings_Accessories_HMC.xml
+++ b/HSK more content/Languages/Russian/DefInjected/ThingDefs/Buildings_Accessories_HMC.xml
@@ -16,4 +16,7 @@
 	<HMC_GS_Tribal_Facility.label>Приставная тумба со светокамнем</HMC_GS_Tribal_Facility.label>
 	<HMC_GS_Tribal_Facility.description>Простенькое место для хранения заметок и результатов экспериментов. Незначительно увеличивает скорость исследования, если установить рядом с примитивным научным столом. Мягкий светокамневый свет усиливает этот эффект.\n\nСтакается до 3. Стакается с другими приставными столиками.</HMC_GS_Tribal_Facility.description>
 
+	<Strong_leader_HMC.label>Скульптура сильного лидера</Strong_leader_HMC.label>
+	<Strong_leader_HMC.description>Эта потрясающая статуя сильного лидера и крепкого хозяйственника станет отличным мотивирующим элементом любой колонии.</Strong_leader_HMC.description>
+
 </LanguageData>
